Change hover element to scrollbar's parent when hit test contains scrollbar

This issue is caused by remove hit test element in
|Document::updateHoverActiveState| when hit test contains scrollbar. Instead we
should replace the hit test element to be scrollbar's parent when hitting a
scrollbar.

BUG=686678

Review-Url: https://codereview.chromium.org/2668133003
Cr-Commit-Position: refs/heads/master@{#448078}

Former-commit-id: 4d68b33ea8398044d86aa76353e6f7de6880bad6